fixed follow button not showing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -112,6 +112,7 @@ footer{
 }
 
 #sidePanel{
+  height: 100vh;
   overflow-y: scroll;
 }
 
